DC bus modeli üzerine hazırlanan sunumda rectifier etkileri incelendi. Sırada unbalance var.

--- a/.gitignore
+++ b/.gitignore
@@ -1118,3 +1118,31 @@ Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudi
 Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_acc.def
 Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_ref.rsp
 Simulation/balancing/slprj/accel/sixthharmonicstudies_another/sixthharmonicstudies_another_acc.h
+Simulation/Single_noparasitics_balanced_rectifieradded_acc.mexw64
+Simulation/Single_noparasitics_balanced_rectifieradded_acc.exp
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded.mk
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded.bat
+Simulation/dcbusmodelwrapup/Single_noparasitics_balanced_rectifieradded_acc.mexw64
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/codedescriptor.dmr
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/__cf_Single_noparasitics_balanced_rectifieradded.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded_ref.rsp
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded_acc_types.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded_acc_private.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded_acc_data.c
+Simulation/dcbusmodelwrapup/Single_noparasitics_balanced_rectifieradded_acc.exp
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rtGetNaN.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rtGetInf.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rtGetInf.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/multiword_types.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/modelsources.txt
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/defines.txt
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/sfun.map
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded_acc.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded_acc.def
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/Single_noparasitics_balanced_rectifieradded_acc.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rtwtypes.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rtw_proj.tmw
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rt_nonfinite.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rt_nonfinite.c
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rt_defines.h
+Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_balanced_rectifieradded/rtGetNaN.h
