--- a/.gitignore
+++ b/.gitignore
@@ -1198,3 +1198,29 @@ Simulation/dcbusmodelwrapup/slprj/accel/Single_noparasitics_unbalanceonload_rect
 Simulation/dcbusmodelwrapup/Single_noparasitics_unbalanceonload_rectifieradded_acc.exp
 Simulation/dcbusmodelwrapup/Single_noparasitics_unbalanceonload_infinitebus_acc.exp
 Simulation/dcbusmodelwrapup/Single_noparasitics_unbalanceonload_infinitebus_acc.mexw64
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rt_nonfinite.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rt_defines.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rtGetNaN.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/multiword_types.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc.def
+Simulation/dcbusmodelwrapup/TwoParallel_noparasitics_balanced_infinitebus_acc.mexw64
+Simulation/dcbusmodelwrapup/TwoParallel_noparasitics_balanced_infinitebus_acc.exp
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rtwtypes.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rtw_proj.tmw
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rt_nonfinite.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/codedescriptor.dmr
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/__cf_TwoParallel_noparasitics_balanced_infinitebus.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_ref.rsp
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus.mk
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus.bat
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rtGetNaN.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rtGetInf.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rtGetInf.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc_types.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc_private.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/sfun.map
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/modelsources.txt
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/defines.txt
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc_data.c
