2-paralel modelde rectifier'ın interleavinge potansiyel etkisi sunuma eklendi.

--- a/.gitignore
+++ b/.gitignore
@@ -1224,3 +1224,43 @@ Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infini
 Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/modelsources.txt
 Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/defines.txt
 Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc_data.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/sfun.map
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rtwtypes.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rtw_proj.tmw
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rt_nonfinite.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rt_nonfinite.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rt_nonfinite.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rt_defines.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rtGetNaN.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rtGetNaN.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rtGetNaN.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rtGetInf.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rtGetInf.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/rtGetInf.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/multiword_types.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/modelsources.txt
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/lccstub.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/defines.txt
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/codedescriptor.dmr
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/__cf_TwoParallel_noparasitics_balanced_rectifieradded.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_ref.rsp
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_acc_types.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_acc_private.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_acc_data.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_acc_data.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_acc.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_acc.h
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_acc.def
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded_acc.c
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded.mk
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_rectifieradded/TwoParallel_noparasitics_balanced_rectifieradded.bat
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rt_nonfinite.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rtGetNaN.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/rtGetInf.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/lccstub.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc_data.obj
+Simulation/dcbusmodelwrapup/slprj/accel/TwoParallel_noparasitics_balanced_infinitebus/TwoParallel_noparasitics_balanced_infinitebus_acc.obj
+Simulation/dcbusmodelwrapup/TwoParallel_noparasitics_balanced_rectifieradded_acc.mexw64
+Simulation/dcbusmodelwrapup/TwoParallel_noparasitics_balanced_rectifieradded_acc.lib
+Simulation/dcbusmodelwrapup/TwoParallel_noparasitics_balanced_rectifieradded_acc.exp
+Simulation/dcbusmodelwrapup/TwoParallel_noparasitics_balanced_infinitebus_acc.lib
